// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-scrollable css-g2yo33"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-12ced0d"
  >
    Some people are worth melting for.
  </div>
</div>
`;

exports[`props should render smoothScroll 1`] = `
<div
  class="wp-components-scrollable css-1w3lmav"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-12ced0d"
  >
    Some people are worth melting for.
  </div>
</div>
`;
